--- a/examples/bluegreen/base/kustomization.yaml
+++ b/examples/bluegreen/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- ../../bluegreen
 - rollout.yaml
 - services.yaml
 - routes.yaml
