combine manage + Dashboard to one chart

--- a/Rollouts-Manager/rollouts-manager/templates/rolloutmanager.yaml
+++ b/Rollouts-Manager/rollouts-manager/templates/rolloutmanager.yaml
@@ -1,6 +1,4 @@
 apiVersion: argoproj.io/v1alpha1
 kind: RolloutManager
 metadata:
-  name: argo-rollout
-
-
+  name: {{ include "rollouts-manager.fullname" . }}
