--- a/Rollouts-Manager/rollouts-manager/templates/serviceaccount.yaml
+++ b/Rollouts-Manager/rollouts-manager/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "rollouts-dashboard.serviceAccountName" . }}
+  name: {{ include "rollouts-manager.serviceAccountName" . }}
   labels:
-    {{- include "rollouts-dashboard.labels" . | nindent 4 }}
+    {{- include "rollouts-manager.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
