--- a/Rollouts-Manager/rollouts-manager/templates/deployment.yaml
+++ b/Rollouts-Manager/rollouts-manager/templates/deployment.yaml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "rollouts-dashboard.fullname" . }}
+  name: {{ include "rollouts-manager.fullname" . }}
   labels:
-    {{- include "rollouts-dashboard.labels" . | nindent 4 }}
+    {{- include "rollouts-manager.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "rollouts-dashboard.selectorLabels" . | nindent 6 }}
+      {{- include "rollouts-manager.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -16,13 +16,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "rollouts-dashboard.selectorLabels" . | nindent 8 }}
+        {{- include "rollouts-manager.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "rollouts-dashboard.serviceAccountName" . }}
+      serviceAccountName: {{ include "rollouts-manager.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
