--- a/Rollouts-Manager/rollouts-manager/templates/route.yaml
+++ b/Rollouts-Manager/rollouts-manager/templates/route.yaml
@@ -2,9 +2,9 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: {{ include "rollouts-dashboard.fullname" . }}
+  name: {{ include "rollouts-manager.fullname" . }}
   labels:
-    {{- include "rollouts-dashboard.labels" . | nindent 4 }}
+    {{- include "rollouts-manager.labels" . | nindent 4 }}
 spec:
   {{ if .Values.route.host }}
   host: {{ .Values.route.host.fqdn }}
@@ -16,7 +16,7 @@ spec:
     termination: {{ .Values.route.tls.termination }}
   to:
     kind: Service
-    name: {{ include "rollouts-dashboard.fullname" . }}
+    name: {{ include "rollouts-manager.fullname" . }}
     weight: 100
   wildcardPolicy: None
 {{- end -}}
