--- a/Rollouts-Manager/rollouts-manager/templates/serviceaccount.yaml
+++ b/Rollouts-Manager/rollouts-manager/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "rollouts-manager.serviceAccountName" . }}
+  name: {{- include "rollouts-manager.serviceAccountName" . }}
   labels:
     {{- include "rollouts-manager.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
