--- a/examples/bluegreen/base/rollout.yaml
+++ b/examples/bluegreen/base/rollout.yaml
@@ -21,7 +21,7 @@ spec:
           requests:
             memory: 250Mi
             cpu: 300m
-          limit:
+          limits:
             memory:
               memory: 500Mi
               cpu: 500m
