--- a/examples/bluegreen/base/rollout.yaml
+++ b/examples/bluegreen/base/rollout.yaml
@@ -18,13 +18,12 @@ spec:
         image: quay.io/thason/rollouts:purple
         imagePullPolicy: IfNotPresent
         resources:
-          requests:
-            memory: 250Mi
-            cpu: 300m
           limits:
-            memory:
-              memory: 500Mi
-              cpu: 500m
+            cpu: 4
+            memory: 6Gi
+            requests:
+              cpu: 2
+              memory: 4Gi
         ports:
         - containerPort: 8080
   strategy:
