--- a/examples/bluegreen/base/rollout.yaml
+++ b/examples/bluegreen/base/rollout.yaml
@@ -19,11 +19,11 @@ spec:
         imagePullPolicy: IfNotPresent
         resources:
           limits:
-            cpu: 4
-            memory: 6Gi
+            cpu: 250
+            memory: 250Mi
           requests:
-            cpu: 2
-            memory: 4Gi
+            cpu: 200
+            memory: 200Gi
         ports:
         - containerPort: 8080
   strategy:
