--- a/examples/bluegreen/base/rollout.yaml
+++ b/examples/bluegreen/base/rollout.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: rollouts-demo
-        image: quay.io/thason/rollouts:green
+        image: quay.io/thason/rollouts:purple
         imagePullPolicy: IfNotPresent
         resources:
           limits:
